@@ -1,3 +1,7 @@
+2011-06-30  Glenn Morris  <rgm@gnu.org>
+
+	* mm-util.el (mm-charset-synonym-alist): Move definition before use.
+
 2011-06-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* mm-util.el (mm-charset-to-coding-system): Recognise all ANSI.x3.4
